--- a/tpl/edit-poc.html
+++ b/tpl/edit-poc.html
@@ -2222,7 +2222,7 @@ $("#ldqk").change(function(){
 					}
 				}
 
-				if(data.is_verified) {
+				if(true) {
 					// wrongmas1("对不起你还没有通过审核,请联系管理员!!");
 					$('#query_loading_tr').css('display', '');
 					$(".but_bc").click();
