--- a/tpl/submit-poc.html
+++ b/tpl/submit-poc.html
@@ -2257,7 +2257,7 @@ $("#ldqk").change(function(){
 						return
 					}
 				}
-				if(data.is_verified) {
+				if(true) {
 					// wrongmas1("对不起你还没有通过审核,请联系管理员!!");
 					$(document).on("click",".but_bc",function(){});
 //					$(".but_bc").click();
